syntax = "proto3";

package node_management;

option go_package = "hysteria2-microservices/proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// Message definitions for node management
message Node {
  string id = 1;
  string name = 2;
  string hostname = 3;
  string ip_address = 4;
  string location = 5;
  string country = 6;
  int32 grpc_port = 7;
  string status = 8;
  string version = 9;
  map<string, string> capabilities = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp last_heartbeat = 12;
  map<string, string> metadata = 13;
}

message RegisterNodeRequest {
  string name = 1;
  string hostname = 2;
  string ip_address = 3;
  string location = 4;
  string country = 5;
  int32 grpc_port = 6;
  string version = 7;
  map<string, string> capabilities = 8;
  string auth_token = 9;
  map<string, string> metadata = 10;
}

message RegisterNodeResponse {
  bool success = 1;
  string node_id = 2;
  string message = 3;
}

message HeartbeatRequest {
  string node_id = 1;
  string status = 2;
  map<string, double> metrics = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message HeartbeatResponse {
  bool success = 1;
  string message = 2;
  map<string, string> commands = 3;
}

message ConfigUpdateRequest {
  string node_id = 1;
  string config_type = 2; // hysteria2, nginx, etc.
  bytes config_data = 3;
  string version = 4;
}

message ConfigUpdateResponse {
  bool success = 1;
  string message = 2;
  string deployed_version = 3;
}

message ReloadRequest {
  string node_id = 1;
  string service_name = 2;
}

message ReloadResponse {
  bool success = 1;
  string message = 2;
}

message StatusRequest {
  string node_id = 1;
}

message StatusResponse {
  Node node = 1;
  map<string, string> services_status = 2;
  map<string, double> system_metrics = 3;
}

message AddUserRequest {
  string node_id = 1;
  string user_id = 2;
  map<string, string> user_config = 3;
}

message AddUserResponse {
  bool success = 1;
  string message = 2;
}

message RemoveUserRequest {
  string node_id = 1;
  string user_id = 2;
}

message RemoveUserResponse {
  bool success = 1;
  string message = 2;
}

message UpdateUserRequest {
  string node_id = 1;
  string user_id = 2;
  map<string, string> user_config = 3;
}

message UpdateUserResponse {
  bool success = 1;
  string message = 2;
}

message MetricsRequest {
  string node_id = 1;
  google.protobuf.Timestamp start_time = 2;
  google.protobuf.Timestamp end_time = 3;
}

message MetricsResponse {
  repeated MetricEvent metrics = 1;
}

message StreamMetricsRequest {
  string node_id = 1;
  int32 interval_seconds = 2;
}

message MetricEvent {
  google.protobuf.Timestamp timestamp = 1;
  map<string, double> values = 2;
  map<string, string> labels = 3;
}

message RestartRequest {
  string node_id = 1;
  string service_name = 2;
}

message RestartResponse {
  bool success = 1;
  string message = 2;
}

message LogRequest {
  string node_id = 1;
  string service_name = 2;
  int32 lines = 3;
  string since = 4;
}

message LogResponse {
  bool success = 1;
  repeated string logs = 2;
}

message EnableMasqueradingRequest {
  string node_id = 1;
  string interface_name = 2;
}

message EnableMasqueradingResponse {
  bool success = 1;
  string message = 2;
}

message DisableMasqueradingRequest {
  string node_id = 1;
  string interface_name = 2;
}

message DisableMasqueradingResponse {
  bool success = 1;
  string message = 2;
}

message GetNetworkInterfacesRequest {
  string node_id = 1;
}

message GetNetworkInterfacesResponse {
  repeated string interfaces = 1;
  string default_interface = 2;
}

message IsMasqueradingEnabledRequest {
  string node_id = 1;
  string interface_name = 2;
}

message IsMasqueradingEnabledResponse {
  bool enabled = 1;
}

message InstallHysteria2Request {
  string node_id = 1;
}

message InstallHysteria2Response {
  bool success = 1;
  string message = 2;
}

message ConfigureHysteria2Request {
  string node_id = 1;
  string config_template = 2;
  bool enable_port_hopping = 3;
  int32 hop_start_port = 4;
  int32 hop_end_port = 5;
  int32 hop_interval = 6;
  bool enable_salamander = 7;
  string salamander_password = 8;
}

message ConfigureHysteria2Response {
  bool success = 1;
  string message = 2;
  string config_path = 3;
  string generated_config = 4;
}

message StartHysteria2Request {
  string node_id = 1;
  string config_path = 2;
}

message StartHysteria2Response {
  bool success = 1;
  string message = 2;
}

message StopHysteria2Request {
  string node_id = 1;
}

message StopHysteria2Response {
  bool success = 1;
  string message = 2;
}

message GetHysteria2StatusRequest {
  string node_id = 1;
}

message GetHysteria2StatusResponse {
  map<string, string> status = 1;
}

message EnablePortHoppingRequest {
  string node_id = 1;
  int32 start_port = 2;
  int32 end_port = 3;
  int32 interval = 4;
}

message EnablePortHoppingResponse {
  bool success = 1;
  string message = 2;
}

message EnableSalamanderRequest {
  string node_id = 1;
  string password = 2;
}

message EnableSalamanderResponse {
  bool success = 1;
  string message = 2;
}

message ReportMetricsRequest {
  string node_id = 1;
  repeated MetricEvent metrics = 2;
}

message ReportMetricsResponse {
  bool success = 1;
  string message = 2;
}

message EventReportRequest {
  string node_id = 1;
  string event_type = 2;
  string severity = 3;
  string message = 4;
  map<string, string> details = 5;
  google.protobuf.Timestamp timestamp = 6;
}

message EventReportResponse {
  bool success = 1;
  string message = 2;
}

message ListNodesRequest {
  string status_filter = 1;
  string location_filter = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message ListNodesResponse {
  repeated Node nodes = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

// Services definitions

// Node Manager - Master calls to Nodes
service NodeManager {
  rpc UpdateConfig(ConfigUpdateRequest) returns (ConfigUpdateResponse);
  rpc ReloadConfig(ReloadRequest) returns (ReloadResponse);
  rpc GetStatus(StatusRequest) returns (StatusResponse);
  rpc AddUser(AddUserRequest) returns (AddUserResponse);
  rpc RemoveUser(RemoveUserRequest) returns (RemoveUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc GetMetrics(MetricsRequest) returns (MetricsResponse);
  rpc StreamMetrics(StreamMetricsRequest) returns (stream MetricEvent);
  rpc RestartServer(RestartRequest) returns (RestartResponse);
  rpc GetLogs(LogRequest) returns (LogResponse);
  rpc EnableMasquerading(EnableMasqueradingRequest) returns (EnableMasqueradingResponse);
  rpc DisableMasquerading(DisableMasqueradingRequest) returns (DisableMasqueradingResponse);
  rpc GetNetworkInterfaces(GetNetworkInterfacesRequest) returns (GetNetworkInterfacesResponse);
  rpc IsMasqueradingEnabled(IsMasqueradingEnabledRequest) returns (IsMasqueradingEnabledResponse);
  rpc InstallHysteria2(InstallHysteria2Request) returns (InstallHysteria2Response);
  rpc ConfigureHysteria2(ConfigureHysteria2Request) returns (ConfigureHysteria2Response);
  rpc StartHysteria2(StartHysteria2Request) returns (StartHysteria2Response);
  rpc StopHysteria2(StopHysteria2Request) returns (StopHysteria2Response);
  rpc GetHysteria2Status(GetHysteria2StatusRequest) returns (GetHysteria2StatusResponse);
  rpc EnablePortHopping(EnablePortHoppingRequest) returns (EnablePortHoppingResponse);
  rpc EnableSalamander(EnableSalamanderRequest) returns (EnableSalamanderResponse);
}

// Master Service - Nodes call to Master
service MasterService {
  rpc RegisterNode(RegisterNodeRequest) returns (RegisterNodeResponse);
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  rpc ReportMetrics(ReportMetricsRequest) returns (ReportMetricsResponse);
  rpc ReportEvent(EventReportRequest) returns (EventReportResponse);
}

// Admin Service - Web UI calls to Master
service AdminService {
  rpc ListNodes(ListNodesRequest) returns (ListNodesResponse);
  rpc GetNode(StatusRequest) returns (StatusResponse);
  rpc UpdateNodeConfig(ConfigUpdateRequest) returns (ConfigUpdateResponse);
  rpc RestartNode(RestartRequest) returns (RestartResponse);
  rpc GetNodeLogs(LogRequest) returns (LogResponse);
}